# ChoosingGameAI

./: .gitignore  README.md  main.py  pyproject.toml
BackEnd/: main.py  pyproject.toml
BackEnd/core/: config.py  story_generator.py
BackEnd/db/: database.py
BackEnd/models/: job.py  story.py
BackEnd/routers/: job.py  story.py
BackEnd/schemas/: job.py  story.py
backend/: databse.db  requirements.txt
frontend/: .gitignore  package-lock.json  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/Components/: LoadingStatus.jsx  StoryLoader.jsx  Storygame.jsx  Themeinput.jsx  storyGenerator.jsx
